samples: nfc: Add debug log
Add debug log to trace a NFC protocol error

Signed-off-by: Kamil Gawor <Kamil.Gawor@nordicsemi.no>

--- a/samples/nfc/writable_ndef_msg/prj.conf
+++ b/samples/nfc/writable_ndef_msg/prj.conf
@@ -14,3 +14,7 @@ CONFIG_FLASH=y
 CONFIG_FLASH_PAGE_LAYOUT=y
 CONFIG_NVS=y
 CONFIG_DK_LIBRARY=y
+
+CONFIG_LOG=y
+CONFIG_LOG_DEFAULT_LEVEL=4
+CONFIG_NFC_PLATFORM_LOG_LEVEL_DBG=y
