--- a/samples/nfc/record_text/prj.conf
+++ b/samples/nfc/record_text/prj.conf
@@ -8,3 +8,7 @@ CONFIG_NFC_NDEF=y
 CONFIG_NFC_NDEF_MSG=y
 CONFIG_NFC_NDEF_RECORD=y
 CONFIG_NFC_NDEF_TEXT_RECORD=y
+
+CONFIG_LOG=y
+CONFIG_LOG_DEFAULT_LEVEL=4
+CONFIG_NFC_PLATFORM_LOG_LEVEL_DBG=y
