samples: nfc: Increase ISR thread stack
Signed-off-by: Kamil Gawor <Kamil.Gawor@nordicsemi.no>

--- a/samples/nfc/record_text/prj.conf
+++ b/samples/nfc/record_text/prj.conf
@@ -13,3 +13,13 @@ CONFIG_NFC_NDEF=y
 CONFIG_NFC_NDEF_MSG=y
 CONFIG_NFC_NDEF_RECORD=y
 CONFIG_NFC_NDEF_TEXT_RECORD=y
+
+CONFIG_ISR_STACK_SIZE=8192
+CONFIG_MAIN_STACK_SIZE=8192
+CONFIG_IDLE_STACK_SIZE=8192
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=8192
+
+CONFIG_LOG=y
+CONFIG_CLOCK_CONTROL_LOG_LEVEL_DBG=y
+CONFIG_NFC_PLATFORM_LOG_LEVEL_DBG=y
+
