--- a/samples/nfc/writable_ndef_msg/prj.conf
+++ b/samples/nfc/writable_ndef_msg/prj.conf
@@ -19,3 +19,12 @@ CONFIG_FLASH=y
 CONFIG_FLASH_PAGE_LAYOUT=y
 CONFIG_NVS=y
 CONFIG_DK_LIBRARY=y
+
+CONFIG_ISR_STACK_SIZE=8192
+CONFIG_MAIN_STACK_SIZE=8192
+CONFIG_IDLE_STACK_SIZE=8192
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=8192
+
+CONFIG_LOG=y
+CONFIG_CLOCK_CONTROL_LOG_LEVEL_DBG=y
+CONFIG_NFC_PLATFORM_LOG_LEVEL_DBG=y
