--- a/samples/bluetooth/peripheral_hids_mouse/prj.conf
+++ b/samples/bluetooth/peripheral_hids_mouse/prj.conf
@@ -33,6 +33,10 @@ CONFIG_BT_GATT_DIS_PNP_VID=0x1915
 CONFIG_BT_GATT_DIS_PNP_PID=0xEEEE
 CONFIG_BT_GATT_DIS_PNP_VER=0x0100
 
+CONFIG_BT_CTLR_PHY=y
+CONFIG_BT_CTLR_PHY_CODED=y
+CONFIG_BT_CTLR_ADVANCED_FEATURES=y
+
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
 
 CONFIG_DK_LIBRARY=y
