nfc: Move nfc_platfrom from nrfxlib to ncs
This commit move nfc_platform_zephyr.c from nfxlib repository
to nfc subsys.

Signed-off-by: Kamil Gawor <Kamil.Gawor@nordicsemi.no>

--- a/subsys/nfc/CMakeLists.txt
+++ b/subsys/nfc/CMakeLists.txt
@@ -14,3 +14,6 @@ if (CONFIG_NFC_T4T_ISODEP OR
     CONFIG_NFC_T4T_APDU)
 	add_subdirectory(t4t)
 endif()
+
+zephyr_library()
+zephyr_library_sources(nfc_platform_zephyr.c)
