--- a/samples/bluetooth/peripheral_uart/prj.conf
+++ b/samples/bluetooth/peripheral_uart/prj.conf
@@ -5,11 +5,11 @@
 #
 CONFIG_NCS_SAMPLES_DEFAULTS=y
 
-CONFIG_UART_INTERRUPT_DRIVEN=y
+# Enable the UART driver
+CONFIG_UART_ASYNC_API=y
+CONFIG_UART_0_NRF_UARTE=y
+CONFIG_UART_0_NRF_FLOW_CONTROL=y
 CONFIG_SERIAL=y
-CONFIG_GPIO=y
-
-# Make sure printk is not printing to the UART console
 CONFIG_CONSOLE=y
 CONFIG_CONSOLE_HAS_DRIVER=y
 CONFIG_UART_CONSOLE=y
@@ -35,6 +35,7 @@ CONFIG_NVS=y
 CONFIG_SETTINGS=y
 
 # Enable DK LED and Buttons library
+CONFIG_GPIO=y
 CONFIG_DK_LIBRARY=y
 
 # This example requires more workqueue stack
