--- a/samples/bluetooth/central_uart/prj.conf
+++ b/samples/bluetooth/central_uart/prj.conf
@@ -36,3 +36,12 @@ CONFIG_FLASH_PAGE_LAYOUT=y
 CONFIG_FLASH_MAP=y
 CONFIG_NVS=y
 CONFIG_SETTINGS=y
+
+# Config logger
+CONFIG_LOG=y
+CONFIG_LOG_MINIMAL=n
+CONFIG_USE_SEGGER_RTT=y
+CONFIG_LOG_BACKEND_RTT=y
+CONFIG_LOG_BACKEND_UART=n
+CONFIG_LOG_PRINTK=n
+CONFIG_LOG_BACKEND_RTT_FORCE_PRINTK=n
