--- a/samples/bluetooth/central_uart/CMakeLists.txt
+++ b/samples/bluetooth/central_uart/CMakeLists.txt
@@ -5,6 +5,8 @@
 #
 cmake_minimum_required(VERSION 3.8.2)
 
+set(DTC_OVERLAY_FILE "${CMAKE_CURRENT_SOURCE_DIR}/prj.overlay")
+
 include($ENV{ZEPHYR_BASE}/../nrf/cmake/boilerplate.cmake)
 include($ENV{ZEPHYR_BASE}/cmake/app/boilerplate.cmake NO_POLICY_SCOPE)
 project(central_uart)
