--- a/samples/bluetooth/central_uart/prj.conf
+++ b/samples/bluetooth/central_uart/prj.conf
@@ -6,7 +6,9 @@
 CONFIG_NCS_SAMPLES_DEFAULTS=y
 
 # Enable the UART driver
-CONFIG_UART_INTERRUPT_DRIVEN=y
+CONFIG_UART_ASYNC_API=y
+CONFIG_UART_0_NRF_UARTE=y
+CONFIG_UART_0_NRF_FLOW_CONTROL=y
 CONFIG_SERIAL=y
 CONFIG_CONSOLE=y
 CONFIG_CONSOLE_HAS_DRIVER=y
